--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
@@ -20,9 +20,15 @@
                     <a class="header-top__logo" href="#">
                         Техномарт
                     </a>
-                    <a class="header-top__search" href="#">
-                        Поиск
-                    </a>
+                    <form class="header-top__search search-block" action="">
+                        <label class="search-block__label">
+                            <span class="search-block__span">
+                                Поиск:
+                            </span>
+                            <input class="search-block__input" class="search-block__label" type="text">
+                            <svg class="search-block__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+                        </label>
+                    </form>
                     <a class="header-top__bookmark header-top__item" href="#">
                         Закладки: 0
                     </a>
@@ -138,7 +144,7 @@
                 <ul class="catalog-header__list">
                     <li class="catalog-header__item">
                         <a class="catalog-header__link" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"><g><path d="M3 8v4h4V8h2v4h4V8L8 3.516z"/><path d="M14.831 6.365L13 4.751V0h-2v2.987L8.332.635c-.02-.017-.043-.023-.064-.037a.465.465 0 0 0-.08-.047.551.551 0 0 0-.095-.024C8.062.521 8.032.515 8 .515c-.031 0-.061.006-.092.012a.46.46 0 0 0-.095.025c-.028.011-.053.029-.08.046-.021.014-.045.02-.064.037l-6.498 5.73a.501.501 0 0 0 .33.875.497.497 0 0 0 .331-.125L8 1.677l6.169 5.438a.501.501 0 0 0 .662-.75z"/></g></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12"><g fill="#C1C6CE"><path d="M3 8v4h4V8h2v4h4V8L8 3.516z"/><path d="M14.831 6.365L13 4.751V0h-2v2.987L8.332.635c-.02-.017-.043-.023-.064-.037a.465.465 0 0 0-.08-.047.551.551 0 0 0-.095-.024C8.062.521 8.032.515 8 .515c-.031 0-.061.006-.092.012a.46.46 0 0 0-.095.025c-.028.011-.053.029-.08.046-.021.014-.045.02-.064.037l-6.498 5.73a.501.501 0 0 0 .33.875.497.497 0 0 0 .331-.125L8 1.677l6.169 5.438a.501.501 0 0 0 .662-.75z"/></g></svg>
                         </a>
                     </li>
                     <li class="catalog-header__item">
@@ -166,15 +172,88 @@
             <div class="catalog-content">
 
                 <div class="catalog-filter">
-                
+                    <h2 class="catalog-filter__title">
+                        Фильтр:
+                    </h2>
+
+                    <form class="form-sort" method="get" action="https://echo.htmlacademy.ru">
+                        <fieldset>
+                            <legend>
+                                Производители:
+                            </legend>
+                            <ul class="filter-manufacturers">
+                                <li class="filter-manufacturers__item">
+                                    <label class="filter-manufacturers__label">
+                                        <input class="filter-manufacturers__input visually-hidden" type="checkbox" name="Bosch" checked>
+                                        <span class="filter-manufacturers__checkbox"></span>
+                                        Bosch
+                                    </label>
+                                </li>
+                                <li class="filter-manufacturers__item">
+                                    <label class="filter-manufacturers__label">
+                                        <input class="filter-manufacturers__input visually-hidden" type="checkbox" name="Интерскол">
+                                        <span class="filter-manufacturers__checkbox"></span>
+                                        Интерскол
+                                    </label>
+                                </li>
+                                <li class="filter-manufacturers__item">
+                                    <label class="filter-manufacturers__label">
+                                        <input class="filter-manufacturers__input visually-hidden" type="checkbox" name="Makita" checked>
+                                        <span class="filter-manufacturers__checkbox"></span>
+                                        Makita
+                                    </label>
+                                </li>
+                                <li class="filter-manufacturers__item">
+                                    <label class="filter-manufacturers__label">
+                                        <input class="filter-manufacturers__input visually-hidden" type="checkbox" name="Dewalt">
+                                        <span class="filter-manufacturers__checkbox"></span>
+                                        Dewalt
+                                    </label>
+                                </li>
+                                <li class="filter-manufacturers__item">
+                                    <label class="filter-manufacturers__label">
+                                        <input class="filter-manufacturers__input visually-hidden" type="checkbox" name="Hitachi">
+                                        <span class="filter-manufacturers__checkbox"></span>
+                                        Hitachi
+                                    </label>
+                                </li>
+                            </ul>
+                        </fieldset>
+
+                        <fieldset>
+                            <legend>
+                                Питание:
+                            </legend>
+                            <ul class="filter-power">
+                                <li class="filter-power__item">
+                                    <label class="filter-power__label" for="filter-rechargeable">
+                                        <input class="filter-power__input visually-hidden" id="filter-rechargeable" type="radio" name="power-supply" value="rechargeable" checked>
+                                        <span class="filter-power__radio"></span>
+                                        Аккумуляторные
+                                    </label>
+                                </li>
+                                <li class="filter-power__item"> 
+                                    <label class="filter-power__label" for="filter-network">
+                                        <input class="filter-power__input visually-hidden" id="filter-network" type="radio" name="power-supply" value="network">   
+                                        <span class="filter-power__radio"></span>
+                                        Сетевые
+                                    </label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                            
+                        <button class="btn-filter" type="submit">
+                            Показать
+                        </button>
+                    </form>
                 </div>
                 <div class="catalog-sort">
 
                     <div class="catalog-sort__inner">
 
-                        <h3 class="catalog-sort__title">
+                        <h2 class="catalog-sort__title">
                             Сортировка:
-                        </h3>
+                        </h2>
                         <ul class="catalog-sort__list list-type">
                             <li class="list-type__item">
                                 <a class="list-type__link" href="#">
@@ -214,9 +293,9 @@
 
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 22500 р.
                             </span>
@@ -234,9 +313,9 @@
                         </li>
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 30500 р.
                             </span>
@@ -255,9 +334,9 @@
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
                             <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
-                            </h2>
+                            </h3>
                             <div class="goods-list__price">
                                 12500 р.
                             </div>
@@ -272,9 +351,9 @@
                         </li>
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 22500 р.
                             </span>
@@ -292,9 +371,9 @@
                         </li>
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 30500 р.
                             </span>
@@ -313,9 +392,9 @@
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
                             <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
-                            </h2>
+                            </h3>
                             <div class="goods-list__price">
                                 12500 р.
                             </div>
@@ -330,9 +409,9 @@
                         </li>
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 22500 р.
                             </span>
@@ -350,9 +429,9 @@
                         </li>
                         <li class="goods-list__item">
                             <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
-                            </h2>
+                            </h3>
                             <span class="goods-list__oldPrice">
                                 30500 р.
                             </span>
@@ -371,9 +450,9 @@
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
                             <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
-                            <h2 class="goods-list__title">
+                            <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
-                            </h2>
+                            </h3>
                             <div class="goods-list__price">
                                 12500 р.
                             </div>
@@ -389,30 +468,30 @@
 
                     </ul>  <!-- /.popular-goods__list .goods-list -->
 
-                    <ul class="list-tab">
+                    <div>
+                        <ul class="list-tab">
 
-                        <li class="list-tab__item list-tab__active">
-                            <a class="list-tab__link" href="#">
-                                1
-                            </a>
-                        </li>
-                        <li class="list-tab__item">
-                            <a class="list-tab__link" href="#">
-                                2
-                            </a>
-                        </li>
-                        <li class="list-tab__item">
-                            <a class="list-tab__link" href="#">
-                                3
-                            </a>
-                        </li>
-                        <li class="list-tab__item">
-                            <a class="list-tab__link" href="#">
-                                Следующая
-                            </a>
-                        </li>
+                            <li class="list-tab__item list-tab__active">
+                                <a class="list-tab__link" href="#">
+                                    1
+                                </a>
+                            </li>
+                            <li class="list-tab__item">
+                                <a class="list-tab__link" href="#">
+                                    2
+                                </a>
+                            </li>
+                            <li class="list-tab__item">
+                                <a class="list-tab__link" href="#">
+                                    3
+                                </a>
+                            </li>
 
-                    </ul>
+                        </ul>
+                        <a class="list-tab__link" href="#">
+                            Следующая
+                        </a>
+                    </div>
 
                 </div>            
 
@@ -457,7 +536,7 @@
                         <ul class="top-list">
                             <li class="top-list__item">
                                 <a class="top-list__link" href="#">
-                                    Копмания
+                                    Компания
                                 </a>
                             </li>
                             <li class="top-list__item">
@@ -517,17 +596,23 @@
                 <div class="footer-bottom__inner">
 
                     <p class="footer-bottom__copyright">
-                        &copy; 2010–2019 Компания &laquo;Техномарт&laquo; Все права защищены
+                        &copy; 2010–2019 Компания &laquo;Техномарт&raquo; Все права защищены
                     </p>
                     <div class="footer-bottom__social social">
-                        <a class="social__item" href="#" target="_blank">
-                            <img class="social__icon social__icon_vk" src="img/footer/vk.svg" alt="vk">
+                        <a class="social__item social__item_vk" href="#" target="_blank">
+                            <span class="visually-hidden"> 
+                                Мы в vk
+                            </span>
                         </a>
-                        <a class="social__item" href="#" target="_blank">
-                            <img class="social__icon social__icon_facebook" src="img/footer/facebook.svg" alt="facebook">
+                        <a class="social__item social__item_fb" href="#" target="_blank">
+                            <span class="visually-hidden"> 
+                                Мы в facebook
+                            </span>
                         </a>
-                        <a class="social__item" href="#" target="_blank">
-                            <img class="social__icon social__icon_in" src="img/footer/instagram.svg" alt="instagram">
+                        <a class="social__item social__item_in" href="#" target="_blank">
+                            <span class="visually-hidden"> 
+                                Мы в instagram
+                            </span>
                         </a>
                     </div>
                     <ul class="footer-bottom__list list-info">
@@ -555,6 +640,7 @@
         </div>  <!-- /.footer-bottom -->
 
     </footer>
+
 
 </body>
 </html>
