--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="catalog-page">
 
     <header class="header">
         
@@ -17,15 +17,17 @@
 
                 <div class="header-top__inner">
 
-                    <a class="header-top__logo" href="#">
-                        Техномарт
+                    <a class="header-top__logo" href="index.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="108" height="18" viewBox="0 0 108 18">
+                            <path d="M185.421,15.306H189.2V31.055h2.128V15.306h3.783v-1.75h-9.694v1.75Zm13.827,7.5h5.2v-1.75h-5.2v-5.75h5.911v-1.75H197.12v17.5h8.039v-1.75h-5.911v-6.5Zm12.713-2.25-2.6-7h-2.128l3.192,8.5-3.547,9h2.128l2.955-7.5,2.956,7.5h2.128l-3.547-9,3.192-8.5h-2.128Zm14.241-7v7.749h-4.965V13.556h-2.128v17.5h2.128v-8H226.2v8h2.128v-17.5H226.2Zm7.673,0.175a3.776,3.776,0,0,0-1.6,1.45,7.924,7.924,0,0,0-1,2.762,23.065,23.065,0,0,0-.343,4.362,23.061,23.061,0,0,0,.343,4.362,7.917,7.917,0,0,0,1,2.762,3.772,3.772,0,0,0,1.6,1.45,5.6,5.6,0,0,0,4.279,0,3.772,3.772,0,0,0,1.6-1.45,7.957,7.957,0,0,0,1-2.762,23.144,23.144,0,0,0,.343-4.362,23.149,23.149,0,0,0-.343-4.362,7.964,7.964,0,0,0-1-2.762,3.776,3.776,0,0,0-1.6-1.45A5.6,5.6,0,0,0,233.875,13.732ZM234.9,29.48a2.61,2.61,0,0,1-.946-1.175,9.121,9.121,0,0,1-.65-2.3,22.666,22.666,0,0,1-.248-3.7,22.67,22.67,0,0,1,.248-3.7,9.126,9.126,0,0,1,.65-2.3,2.614,2.614,0,0,1,.946-1.175,2.064,2.064,0,0,1,2.223,0,2.627,2.627,0,0,1,.946,1.175,9.168,9.168,0,0,1,.65,2.3,22.67,22.67,0,0,1,.248,3.7,22.666,22.666,0,0,1-.248,3.7,9.164,9.164,0,0,1-.65,2.3,2.623,2.623,0,0,1-.946,1.175A2.064,2.064,0,0,1,234.9,29.48Zm16.866-.675L255.2,18.056h0.118l0.71,13h2.128l-0.946-17.5h-2.6l-3.854,12h-0.095l-3.854-12h-2.6l-0.945,17.5h2.128l0.709-13h0.118l3.429,10.749h2.128Zm16.252-2.25,1.064,4.5h2.128l-4.019-17.5H264.12l-4.019,17.5h2.128l1.064-4.5h4.728Zm-0.354-1.75h-4.02l1.963-8.75H265.7Zm7.783-.625V14.931h1.655a4.037,4.037,0,0,1,1.384.212,2.02,2.02,0,0,1,.957.738A3.628,3.628,0,0,1,280,17.306a11.945,11.945,0,0,1,.177,2.25,11.944,11.944,0,0,1-.177,2.25,3.628,3.628,0,0,1-.556,1.425,2.016,2.016,0,0,1-.957.737,4.023,4.023,0,0,1-1.384.213H275.45Zm0,1.5a10.754,10.754,0,0,0,1.135.175,11.424,11.424,0,0,0,1.23.075,5.725,5.725,0,0,0,2-.313,3.053,3.053,0,0,0,1.4-1.05,5.056,5.056,0,0,0,.827-1.962,14.393,14.393,0,0,0,.272-3.05,13.128,13.128,0,0,0-.284-2.975,4.544,4.544,0,0,0-.9-1.925,3.389,3.389,0,0,0-1.608-1.037,8.115,8.115,0,0,0-2.412-.312,16.124,16.124,0,0,0-1.974.113,10.644,10.644,0,0,0-1.809.387V31.055h2.128V25.681Zm8.25-10.375h3.783V31.055h2.128V15.306h3.783v-1.75H283.7v1.75Z" transform="translate(-185.406 -13.313)"/>
+                        </svg>
                     </a>
-                    <form class="header-top__search search-block" action="">
+                    <form class="header-top__search search-block" action="echo.htmlacademy.ru">
                         <label class="search-block__label">
                             <span class="search-block__span">
                                 Поиск:
                             </span>
-                            <input class="search-block__input" class="search-block__label" type="text">
+                            <input class="search-block__input" type="text">
                             <svg class="search-block__svg" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
                         </label>
                     </form>
@@ -52,14 +54,14 @@
                     <p class="header-content__text">
                         Интернет-магазин строительных материалов <br>и инструментов для ремонта
                     </p>
-                    <adress class="header-content__contact">
+                    <address class="header-content__contact">
                         <a class="header-content__tel" href="tel:88125550555">
                             +7 (812) 555-05-55
                         </a>
                         <p class="header-content__address">
                             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
                         </p>
-                    </adress>
+                    </address>
                     <div class="user-block">
                         <a class="user-block__name" href="#">
                             <svg class="user-block__icon-user" enable-background="new 0 0 20 18" height="18" viewBox="0 0 20 18" width="20" xmlns="http://www.w3.org/2000/svg"><path d="m17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278 0-2.807-1.8-5.083-4.021-5.083s-4.021 2.276-4.021 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39s-2.118 3.834-2.118 3.834h20s.025-3.099-2.119-3.834z"/></svg>
@@ -279,7 +281,7 @@
                             </li>
                             <li class="list-arrow__item">
                                 <a class="list-arrow__link" href="#">
-                                    <svg class="list-arrow__link-down" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                    <svg class="list-arrow__link-down" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	                                    width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
                                         <polyline points="5.5,10 0,0 11,0 "/>
                                     </svg>
@@ -412,9 +414,9 @@
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
-                            <dell class="goods-list__oldprice">
+                            <del class="goods-list__oldprice">
                                 22500 р.
-                            </dell>
+                            </del>
                             <div class="goods-list__price">
                                 15500 р.
                             </div>
@@ -432,9 +434,9 @@
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
-                            <dell class="goods-list__oldprice">
+                            <del class="goods-list__oldprice">
                                 30500 р.
-                            </dell>
+                            </del>
                             <div class="goods-list__price">
                                 25500 р.
                             </div>
@@ -522,8 +524,10 @@
 
                     <div class="footer-top_contact">
 
-                        <a class="footer-top__logo header-top__logo" href="#">
-                            Техномарт
+                        <a class="footer-top__logo header-top__logo" href="index.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="136.5" height="21.59" viewBox="0 0 136.5 21.59">
+                                <path d="M171.839,2874.06h4.8v18.9h2.7v-18.9h4.8v-2.1h-12.3v2.1Zm17.4,9h6.6v-2.1h-6.6v-6.9h7.5v-2.1h-10.2v21h10.2v-2.1h-7.5v-7.8Zm15.6-2.7-3.3-8.4h-2.7l4.05,10.2-4.5,10.8h2.7l3.75-9,3.75,9h2.7l-4.5-10.8,4.05-10.2h-2.7Zm18-8.4v9.3h-6.3v-9.3h-2.7v21h2.7v-9.6h6.3v9.6h2.7v-21h-2.7Zm10.035,0.21a4.713,4.713,0,0,0-2.025,1.74,9.19,9.19,0,0,0-1.275,3.31,31.718,31.718,0,0,0,0,10.47,9.247,9.247,0,0,0,1.275,3.32,4.713,4.713,0,0,0,2.025,1.74,7.482,7.482,0,0,0,5.43,0,4.713,4.713,0,0,0,2.025-1.74,9.247,9.247,0,0,0,1.275-3.32,31.718,31.718,0,0,0,0-10.47,9.19,9.19,0,0,0-1.275-3.31,4.713,4.713,0,0,0-2.025-1.74A7.482,7.482,0,0,0,232.873,2872.17Zm1.305,18.9a3.182,3.182,0,0,1-1.2-1.41,10.479,10.479,0,0,1-.825-2.76,31.449,31.449,0,0,1,0-8.88,10.479,10.479,0,0,1,.825-2.76,3.182,3.182,0,0,1,1.2-1.41,2.744,2.744,0,0,1,2.82,0,3.182,3.182,0,0,1,1.2,1.41,10.479,10.479,0,0,1,.825,2.76,31.449,31.449,0,0,1,0,8.88,10.479,10.479,0,0,1-.825,2.76,3.182,3.182,0,0,1-1.2,1.41A2.744,2.744,0,0,1,234.178,2891.07Zm21.81-.81,4.35-12.9h0.15l0.9,15.6h2.7l-1.2-21h-3.3l-4.89,14.4h-0.12l-4.89-14.4h-3.3l-1.2,21h2.7l0.9-15.6h0.15l4.35,12.9h2.7Zm20.4-2.7,1.35,5.4h2.7l-5.1-21h-3.9l-5.1,21h2.7l1.35-5.4h6Zm-0.45-2.1h-5.1l2.49-10.5h0.12Zm9.9-.75v-11.1h2.1a5.38,5.38,0,0,1,1.755.25,2.559,2.559,0,0,1,1.215.89,4.221,4.221,0,0,1,.7,1.71,16.313,16.313,0,0,1,0,5.4,4.221,4.221,0,0,1-.7,1.71,2.539,2.539,0,0,1-1.215.88,5.365,5.365,0,0,1-1.755.26h-2.1Zm0,1.8a14.372,14.372,0,0,0,1.44.21,15.316,15.316,0,0,0,1.56.09,7.644,7.644,0,0,0,2.535-.38,3.859,3.859,0,0,0,1.77-1.26,5.877,5.877,0,0,0,1.05-2.35,16.349,16.349,0,0,0,.345-3.66,14.992,14.992,0,0,0-.36-3.57,5.334,5.334,0,0,0-1.14-2.31,4.334,4.334,0,0,0-2.04-1.25,10.854,10.854,0,0,0-3.06-.37,21.7,21.7,0,0,0-2.5.13,14.165,14.165,0,0,0-2.3.47v20.7h2.7v-6.45Zm10.2-12.45h4.8v18.9h2.7v-18.9h4.8v-2.1h-12.3v2.1Z" transform="translate(-171.844 -2871.66)"/>
+                            </svg>
                         </a>
                         <p class="footer-top__address">
                             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55
@@ -640,7 +644,6 @@
         </div>  <!-- /.footer-bottom -->
 
     </footer>
-
 
 </body>
 </html>
